--- a/GBT/GBT/appsettings.json
+++ b/GBT/GBT/appsettings.json
@@ -1,10 +1,13 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "db1": "Server=.;Database=GBT;Trusted_Connection=true;User ID=MobileShop;Password=3!cmc-123;MultipleActiveResultSets=False"
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
 
