Added models and controllers

--- a/GBT/GBT/appsettings.json
+++ b/GBT/GBT/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "db1": "Server=.;Database=GBT;Trusted_Connection=true;User ID=MobileShop;Password=3!cmc-123;MultipleActiveResultSets=False"
+    "db1": "Server=localhost;Database=GBT;Trusted_Connection=true;User ID=SA;Password=Password123;MultipleActiveResultSets=False"
   },
     "Logging": {
       "LogLevel": {
