--- a/GBTAngular1/package.json
+++ b/GBTAngular1/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@ngx-translate/core": "^15.0.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "ng-angular-popup": "^0.2.0",
@@ -39,6 +41,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "^4.5.5"
   }
 }
